added front end changes

--- a/semaphoreflask/templates/base.html
+++ b/semaphoreflask/templates/base.html
@@ -26,14 +26,14 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Tasks</a>
+        <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ url_for('tasks_all') }}">All Tasks</a>
-                <a class="nav-item nav-link" href="{{ url_for('task_new') }}">Create New Task</a>
+                <a class="nav-item nav-link" href="{{ url_for('tasks_all') }}">All Posts</a>
+                <a class="nav-item nav-link" href="{{ url_for('task_new') }}">Create A Post</a>
             </div>
         </div>
     </nav>
