--- a/semaphoreflask/templates/task_create.html
+++ b/semaphoreflask/templates/task_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     {% if operation == 'create' %}
-        <h3>Create new task</h3>
+        <h3>Create new post</h3>
     {% else %}
         <h3>{{ title }}</h3>
     {% endif %}
