--- a/semaphoreflask/templates/tasks_all.html
+++ b/semaphoreflask/templates/tasks_all.html
@@ -2,13 +2,13 @@
 
 {% block content %}
   {% if tasks %}
-    <h4>All tasks</h4>
+    <h4>All posts</h4>
     {% for task in tasks %}
       <div class="card" style="width: 25rem;">
         <div class="card-body">
           <h5 class="card-title">{{ task.task_title }}</h5>
           <p class="card-text">{{ task.task_description }}</p>
-          <a href="{{ url_for('task_view', task_id=task.task_id) }}" class="card-link">View Task</a>
+          <a href="{{ url_for('task_view', task_id=task.task_id) }}" class="card-link">View Post</a>
         </div>
       </div>
     {% endfor %}
@@ -17,12 +17,12 @@
       <div class="col-md-12">
         <div class="error-template">
           <h1>
-            Got Lucky!</h1>
+            CS 491 is Poggers!!</h1>
           <h2>
-            No tasks Found</h2>
+            No Posts Found</h2>
           <div class="error-actions">
             <a href="{{ url_for('task_new') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-              Create new task </a>
+              Create new post </a>
           </div>
         </div>
       </div>
