--- a/semaphoreflask/templates/tasks_all.html
+++ b/semaphoreflask/templates/tasks_all.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   {% if tasks %}
-    <h4>All posts</h4>
+    <h4>All Posts</h4>
     {% for task in tasks %}
       <div class="card" style="width: 25rem;">
         <div class="card-body">
