--- a/semaphoreflask/templates/404.html
+++ b/semaphoreflask/templates/404.html
@@ -13,7 +13,7 @@
             </div>
             <div class="error-actions">
                 <a href="{{ url_for('tasks_all') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                    Take Me to the Task List Page </a>
+                    Take Me to the Post List Page </a>
             </div>
         </div>
     </div>
